# coi-states

./: .gitignore  .gitmodules  LICENSE.md  README.md  download.py  download_data.py  job.py  pyproject.toml  requirements.txt
MI/: data.yml
MI/data/: .gitignore  MI_20210901_geo36_cluster_B14_annotations.jsonl  MI_20210901_geo36_cluster_B16_annotations.jsonl  MI_20210901_geo36_cluster_B27_annotations.jsonl  MI_20210901_geo36_cluster_B34_annotations.jsonl  MI_20210901_geo36_cluster_B36_annotations.jsonl  MI_annotations_B18_20210903.jsonl  MI_annotations_B33_20210903.jsonl  MI_dump_20210815.jsonl  README.md  mi_2016_precincts_to_2010_block_groups.json  mi_2020_vtds_to_2010_block_groups.json  mi_comments_20210809.csv  mi_submissions_index_20210816.json  tl_2020_26_vtd20.json
MI/jobs/: 20210823_pipeline.yml  20210825_pipeline_old_data.yml  20210825_pipeline_old_data_with_semantics.yml  20210901_pipeline.yml  20210903_pipeline_new_labels.yml  block_dual_graph.yml
MO/: data.yml
MO/data/: .gitignore  MOCumulativeAug10.csv  MO_dump_20210815.jsonl  README.md  mo_submissions_index_20210819.json  tl_2010_29_bg10.json
MO/jobs/: 20210823_pipeline.yml  20210827_pipeline_old_data.yml  20210901_pipeline.yml  20210902_pipeline.yml  block_dual_graph.yml
OH/: .data.yml.swp  data.yml
OH/data/: .gitignore  OHCumulativeAug10.csv  OH_dump_20210815.jsonl  README.md  oh_2018_precincts_to_2010_block_groups  oh_2018_precincts_to_2010_block_groups.json  oh_2018_precincts_to_2020_blocks.json  (+6 more)
PA/: data.yml
PA/data/: .gitignore  (+1 more)
UT/: data.yml
WI/: data.yml
common/: data.yml
(+106 files in other folders)
