[tool.poetry]
name = "coi-states"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
click = "^8.0.3"
requests = "^2.27.1"
pandas = "^1.3.5"
census = "^0.8.18"
us = "^2.0.2"
submission-analysis = {path = "submission-analysis"}
papermill = "^2.3.3"
jupyterlab = "^3.2.6"
maup = "^1.0.6"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
